manifests/web-pages/small-tech-srv.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: small-tech
  name: small-tech
  namespace: web-pages
spec:
  ports:
  - port: 3001
    targetPort: 0
  selector:
    app: small-tech
status:
  loadBalancer: {}
